@@ -10,4 +10,5 @@
 - Very better Conf class.
 - Url Parsing added.
 - Database module has gone: use a plugin instead.
+- Draft for mongodb plugin.
 - A more "lazy" code and minor optimization.
